# flower_idf

./: .gitignore  README.md
ESP32-S3-CAM-OVxxxx/: .gitignore  CMakeLists.txt  build.md  partitions.csv  sdkconfig.defaults  setup_proto.sh
ESP32-S3-CAM-OVxxxx/factory/: README.md  factory_nvs_template.csv  gen_factory_nvs.py
ESP32-S3-CAM-OVxxxx/main/: CMakeLists.txt  Kconfig.projbuild  assets.h  audio.c  audio.h  audio_pipeline.c  audio_pipeline.h  auto_test.c  auto_test.h  camera.c  camera.h  idf_component.yml  main.c  main.cc  startup_chime.h  test_opus_data.c  test_opus_data.h
ESP32-S3-CAM-OVxxxx/main/audio/: audio_codec.cc  audio_service.cc  audio_service.h
ESP32-S3-CAM-OVxxxx/main/audio/codecs/: audio_codec.cc  audio_codec.h  box_audio_codec.cc
ESP32-S3-CAM-OVxxxx/main/audio/processors/: audio_debugger.h
ESP32-S3-CAM-OVxxxx/main/audio/wake_words/: custom_wake_word.cc
ESP32-S3-CAM-OVxxxx/main/proto/: mqtt_agent.pb.c  mqtt_agent.pb.h
ESP32-S3-CAM-OVxxxx/main/stubs/: assets_stub.h  board_stub.h  lang_config_stub.h  protocol_stub.h
ESP32-S3-CAM-OVxxxx/scripts/: .gitignore  build.ps1  build_flash_capture.ps1  build_flash_monitor.ps1  capture_full.py  capture_monitor.ps1  capture_serial.ps1  capture_serial.py  flash_and_capture.ps1  generate_startup_chime.py  generate_test_opus.py  pack_models.py  reset_and_capture.py
emakefun_esp32_s3r8_camera/: CMakeLists.txt  README.md  copy_sensor_config.cmake  partitions.csv  sdkconfig.defaults
emakefun_esp32_s3r8_camera/factory/: README.md
emakefun_esp32_s3r8_camera/main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  ds18b20.c  ds18b20.h  idf_component.yml  main.c
emakefun_esp32_s3r8_camera/main/proto/: flower.pb.c  flower.pb.h
emakefun_esp32_s3r8_camera/main/sensor_config/: README.md  profile_a_bright.h  profile_b_balanced.h  profile_c_clean.h  profile_d_detail.h  profile_origin.h  profile_x_original.h
esp32_cam_ai_thinker/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32_cam_ai_thinker/docs/superpowers/plans/: 2026-05-26-ai-thinker-adaptation.md
esp32_cam_ai_thinker/docs/superpowers/specs/: 2026-05-25-ai-thinker-adaptation-design.md
esp32_cam_ai_thinker/main/: CMakeLists.txt  Kconfig.projbuild  build_info.c  build_info.h  camera.c  camera.h  idf_component.yml  main.c
nanopb_gen/: .gitignore  setup_proto.sh
nanopb_gen/proto/: flower.pb.h  mqtt_agent.pb.c  mqtt_agent.pb.h
python/: flower_pb2.py  gen_pb.py  test_status_report.py
relay/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  setup_proto.sh
relay/components/nanopb/: CMakeLists.txt
relay/factory/: README.md
relay/main/: CMakeLists.txt  Kconfig.projbuild  main.c
relay/main/proto/: device.pb.c  device.pb.h  flower.pb.c  flower.pb.h
relay_v2/: .gitignore  CMakeLists.txt  build.md  ota.sh  sdkconfig.defaults
relay_v2/docs/superpowers/plans/: 2026-05-29-status-dashboard.md
relay_v2/docs/superpowers/specs/: 2026-05-29-status-dashboard-design.md
relay_v2/factory/: README.md
relay_v2/main/: CMakeLists.txt  Kconfig.projbuild  main.c
web/: .gitignore  gen_proto.sh  index.html  ota_cli.py  server.js  server.py  sim_flr001.py
xiaozhi/docs/: TODO.md  flower-idf-audio-pipeline-analysis.md
