idf_component_register(
    SRCS
        "main.c"
        "camera.c"
        "build_info.c"
        "../../nanopb_gen/proto/flower.pb.c"
    INCLUDE_DIRS
        "."
        "../../nanopb_gen/proto"
    REQUIRES
        esp_wifi
        esp_event
        nvs_flash
        esp_mqtt
        mbedtls
        esp_timer
        esp_driver_gpio
        esp_driver_i2c
        lwip
        nanopb
        esp_http_client
        esp_http_server
        esp_https_ota
        app_update
        spi_flash
        espressif__esp32-camera
)
